--- a/1997/style.css
+++ b/1997/style.css
@@ -16,12 +16,13 @@ body {
   background-size: cover; /* Scale the background image to cover the entire container */
   background-position: center; /* Center the background image */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
-  color: black;
+  background-color: black;
   font-family: 'Andale Mono', monospace;
 }
 body p {
   text-shadow: 2px 2px 2px black;
   font-size: 12px;
+  color: white;
 }
 
 body h1 {
