--- a/1997/style.css
+++ b/1997/style.css
@@ -21,8 +21,11 @@ body {
 }
 body p {
   text-shadow: 2px 2px 2px black;
-  font-size: 12px;
+  font-size: 14px;
   color: white;
+}
+body a {
+  color: cyan;
 }
 
 body h1 {
