--- a/grimpixels/style.css
+++ b/grimpixels/style.css
@@ -16,6 +16,13 @@ header h1 {
     font-size: 2em;
 
 }
+header a {
+    text-decoration: none;
+    color: black;
+    font-size: 1em;
+    padding: 5px;
+
+}
 header img {
     max-width: 140px;
     height: auto;
