--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ footer {
     padding: 20px;
     margin: 20px auto;
     max-width: 800px;
-
+    min-height: 100%;
     border-radius: 8px;
 }
 
