--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ footer {
 
 .content-section p {
   font-family: Montserrat, Arial, sans-serif;
+  line-height: 140%;
     margin: 0;
     padding: 0;
     text-align: left;
