--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ footer {
     max-width: 800px;
     min-height: 475px;
     border-radius: 8px;
+    text-align: left;
 }
 
 .content-section h2 {
